# clique

./: .gitignore  Cargo.toml  README.md  package.json
.config/: nextest.toml
data/: small.clq
frontend/: package.json
frontend/src/: App.css  App.tsx
frontend/src/components/: GraphVisualization.tsx
frontend/src/types/: react-force-graph-2d.d.ts
src/: ga.rs  graph_reader.rs  lib.rs  max_clique.rs  tests.rs
tests/: dimacs_test.rs  test_all.rs
