[package]
name = "clique"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam = "0.8.4"
fixedbitset = "0.5.7"
petgraph = "0.7.1"
rand = "0.9.0"
rayon = "1.10.0"
rstest = "0.25.0"
thiserror = "2.0.12"
tokio = { version = "1", features = ["full"] }

[profile.test]
opt-level = 3
debug = true
target-cpu = "native"
lto = true
codegen-units = 1

