[package]
name = "clique"
version = "0.1.0"
edition = "2024"

[dependencies]
bitvec = "1.0.1"
crossbeam = "0.8.4"
fixedbitset = "0.5.7"
petgraph = "0.7.1"
rand = "0.9.0"
rayon = "1.10.0"
rstest = "0.25.0"
thiserror = "2.0.12"
tokio = { version = "1", features = ["full"] }
actix-web = "4.4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.test]
opt-level = 3
debug = false
lto = true
codegen-units = 1

[profile.release]
opt-level = 3
debug = false
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
